# scraper-search

./: .env.example  README.md  SPEC.md  pyproject.toml
.claude/skills/: README.md
.claude/skills/scraper-search-splash/: requirements.txt  search
.claude/skills/scraper-search-splash/scraper_search/: readability.py
.omc/: project-memory.json
.omc/state/: agent-replay-8b43642e-d16e-4a03-9cea-84ecdfee477d.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-31T15-47-39-753Z.json  checkpoint-2026-03-31T16-17-08-828Z.json  checkpoint-2026-03-31T16-37-49-745Z.json
skills/: README.md  SKILL.md
skills/scraper-search-splash/: SKILL.md  install.sh  skill.md
skills/scraper-search-splash/scraper_search/: fetcher.py
src/scraper_search/: __init__.py  cli.py  formatter.py  search.py
src/scraper_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
